new: add pumpkin cheesecake's recipe
Add tiramisu.html and a representative image.
Add link from index.html to it.

--- a/index.html
+++ b/index.html
@@ -12,4 +12,6 @@
     <a href="./recipes/lasagna.html">Lasagna</a>
     <br>
     <a href="./recipes/tiramisu.html">Tiramisù</a>
+    <br>
+    <a href="./recipes/cheesecake.html">Pumpkin cheesecake</a>
 </html>
