new: add pain au chocolate's recipe
Add painauchocolat.html and a representative image.
Add link from index.html to it.

--- a/index.html
+++ b/index.html
@@ -14,4 +14,6 @@
     <a href="./recipes/tiramisu.html">Tiramisù</a>
     <br>
     <a href="./recipes/cheesecake.html">Pumpkin cheesecake</a>
+    <br>
+    <a href="./recipes/painauchocolat.html">Pain au chocolat</a>
 </html>
