fix: fix main page
Fix code in index.html.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <head>
         <meta charset="utf-8">
         <title>Recipe website</title>
+        <link rel="stylesheet" href="./assets/css/index.css">
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
+
+        <a href="./recipes/lasagna.html">Lasagna</a>
+        <br>
+        <a href="./recipes/tiramisu.html">Tiramisù</a>
+        <br>
+        <a href="./recipes/cheesecake.html">Pumpkin cheesecake</a>
+        <br>
+        <a href="./recipes/painauchocolat.html">Pain au chocolat</a>
     </body>
-    <a href="./recipes/lasagna.html">Lasagna</a>
-    <br>
-    <a href="./recipes/tiramisu.html">Tiramisù</a>
-    <br>
-    <a href="./recipes/cheesecake.html">Pumpkin cheesecake</a>
-    <br>
-    <a href="./recipes/painauchocolat.html">Pain au chocolat</a>
 </html>
