new: add css to main page
Add css to index.html.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,33 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-
-        <a href="./recipes/lasagna.html">Lasagna</a>
-        <br>
-        <a href="./recipes/tiramisu.html">Tiramisù</a>
-        <br>
-        <a href="./recipes/cheesecake.html">Pumpkin cheesecake</a>
-        <br>
-        <a href="./recipes/painauchocolat.html">Pain au chocolat</a>
+        <div class="navbar-container">
+            <div class="navbar">
+                <img src="./assets/images/chef.png" alt="Icon" height="36" width="36">
+                <h3>Odin Recipes</h3>
+                <a>Credits</a>
+            </div>
+        </div>
+        <div class="header">
+            <h1>Odin Recipes</h1>
+        </div>
+        <div class="main">
+            <div class="recipe">
+            <img class="recipe-image" src="./assets/images/lasagna.jpg" height="200" width="200">
+            <a href="./recipes/lasagna.html">Lasagna</a>
+            </div>
+            <div class="recipe">
+                <img class="recipe-image" src="./assets/images/tiramisu.jpg" height="200" width="200">
+                <a href="./recipes/tiramisu.html">Tiramisù</a>
+            </div>
+            <div class="recipe">
+                <img class="recipe-image" src="./assets/images/cheesecake.jpg" height="200" width="200">
+                <a href="./recipes/cheesecake.html">Pumpkin cheesecake</a>
+            </div>
+            <div class="recipe">
+                <img class="recipe-image" src="./assets/images/painauchocolat.jpg" height="200" width="200">
+                <a href="./recipes/painauchocolat.html">Pain au chocolat</a>
+            </div>
+        </div>
     </body>
 </html>
