--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Lasagna</title>
-        <link rel="stylesheet" href="./../assets/css/lasagna.css">
+        <link rel="stylesheet" href="./../assets/css/recipe.css">
     </head>
 
     <body>
