--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -4,40 +4,57 @@
     <head>
         <meta charset="utf-8">
         <title>Tiramisù</title>
+        <link rel="stylesheet" href="./../assets/css/recipe.css">
     </head>
 
     <body>
-        <h1>Tiramisù recipe</h1>
-        <img src="./../assets/images/tiramisu.jpg" alt="Tiramisù image" height="400" width="400">
-        <h2>Description</h2>
-        <p>Tiramisu is a classic Italian dessert made of layers of coffee-soaked ladyfingers, rich mascarpone cheese, cocoa powder, and a hint of rum or liqueur. Its creamy texture and bold coffee flavor are perfectly balanced with a dusting of cocoa on top, making it a beloved treat that combines <em>sweetness</em> and a touch of bitterness in every bite.</p>
-        <p>The ladyfingers, soaked in strong espresso or liqueur, are paired with a velvety mascarpone mixture that includes eggs, sugar, and often a hint of vanilla. The dessert is typically chilled to let the flavors meld, creating a luxurious, <em>melt-in-your-mouth</em> texture. Sometimes, a touch of cocoa or chocolate shavings is added for extra depth.</p>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>6 large egg yolks</li>
-            <li>¾ cup white sugar</li>
-            <li>⅔ cup milk</li>
-            <li>1 ¼ cups heavy cream</li>
-            <li>½ teaspoon vanilla extract</li>
-            <li>1 pound mascarpone cheese, at room temperature</li>
-            <li>¼ cup strong brewed coffee, at room temperature</li>
-            <li>2 tablespoons rum</li>
-            <li>2 [3 ounce] packages ladyfinger cookies</li>
-            <li>1 tablespoon unsweetened cocoa powder</li>
-        </ul>
-        <h2>Steps</h2>
-        <ol>
-            <li>Gather the ingredients.</li>
-            <li>Whisk egg yolks and sugar together in a medium saucepan until well blended.</li>
-            <li>Whisk in milk and cook over medium heat, stirring constantly, until mixture comes to a boil.</li>
-            <li>Boil gently for 1 minute, then remove from the heat and allow to cool slightly.</li>
-            <li>Cover tightly and chill in the refrigerator for 1 hour.</li>
-            <li>Beat cream and vanilla in a medium bowl with an electric mixer until stiff peaks form.</li>
-            <li>Remove egg yolk mixture from the refrigerator; add mascarpone cheese and whisk until smooth.</li>
-            <li>Combine coffee and rum in a small bowl. Split ladyfingers in half lengthwise and drizzle with the coffee mixture. Arrange ½ of the soaked ladyfingers in the bottom of a medium dish.</li>
-            <li>Spread ½ of the mascarpone mixture over the ladyfingers, then spread ½ of the whipped cream over top. Repeat layers once more.</li>
-            <li>Sprinkle cocoa powder over top.</li>
-            <li>Cover and refrigerate until set, 4 to 6 hours.</li>
-        </ol>
+        <div class="navbar-container">
+            <div class="navbar">
+                <img src="./../assets/images/chef.png" alt="Icon" height="36" width="36">
+                <h3>Odin Recipes</h3>
+                <a>Credits</a>
+            </div>
+        </div>
+        <div class="header">
+            <h1>Tiramisù recipe</h1>
+        </div>
+        <div class="main">
+            <div class="description">
+                <h2>Description</h2>
+                <p>Tiramisu is a classic Italian dessert made of layers of coffee-soaked ladyfingers, rich mascarpone cheese, cocoa powder, and a hint of rum or liqueur. Its creamy texture and bold coffee flavor are perfectly balanced with a dusting of cocoa on top, making it a beloved treat that combines <em>sweetness</em> and a touch of bitterness in every bite.</p>
+                <p>The ladyfingers, soaked in strong espresso or liqueur, are paired with a velvety mascarpone mixture that includes eggs, sugar, and often a hint of vanilla. The dessert is typically chilled to let the flavors meld, creating a luxurious, <em>melt-in-your-mouth</em> texture. Sometimes, a touch of cocoa or chocolate shavings is added for extra depth.</p>
+            </div>
+            <div class="ingredients">
+                <h2>Ingredients</h2>
+                <ul>
+                    <li>6 large egg yolks</li>
+                    <li>¾ cup white sugar</li>
+                    <li>⅔ cup milk</li>
+                    <li>1 ¼ cups heavy cream</li>
+                    <li>½ teaspoon vanilla extract</li>
+                    <li>1 pound mascarpone cheese, at room temperature</li>
+                    <li>¼ cup strong brewed coffee, at room temperature</li>
+                    <li>2 tablespoons rum</li>
+                    <li>2 [3 ounce] packages ladyfinger cookies</li>
+                    <li>1 tablespoon unsweetened cocoa powder</li>
+                </ul>
+            </div>
+            <div class="steps">
+                <h2>Steps</h2>
+                <ol>
+                    <li>Gather the ingredients.</li>
+                    <li>Whisk egg yolks and sugar together in a medium saucepan until well blended.</li>
+                    <li>Whisk in milk and cook over medium heat, stirring constantly, until mixture comes to a boil.</li>
+                    <li>Boil gently for 1 minute, then remove from the heat and allow to cool slightly.</li>
+                    <li>Cover tightly and chill in the refrigerator for 1 hour.</li>
+                    <li>Beat cream and vanilla in a medium bowl with an electric mixer until stiff peaks form.</li>
+                    <li>Remove egg yolk mixture from the refrigerator; add mascarpone cheese and whisk until smooth.</li>
+                    <li>Combine coffee and rum in a small bowl. Split ladyfingers in half lengthwise and drizzle with the coffee mixture. Arrange ½ of the soaked ladyfingers in the bottom of a medium dish.</li>
+                    <li>Spread ½ of the mascarpone mixture over the ladyfingers, then spread ½ of the whipped cream over top. Repeat layers once more.</li>
+                    <li>Sprinkle cocoa powder over top.</li>
+                    <li>Cover and refrigerate until set, 4 to 6 hours.</li>
+                </ol>
+            </div>
+        </div>
     </body>
 </html>
