fix: refactor pain au chocolat page
Refactor pain au chocoalt page and add style to it.

--- a/recipes/painauchocolat.html
+++ b/recipes/painauchocolat.html
@@ -4,42 +4,59 @@
     <head>
         <meta charset="utf-8">
         <title>Pain au chocolat</title>
+        <link rel="stylesheet" href="./../assets/css/recipe.css">
     </head>
 
     <body>
-        <h1>Pain au chocolat recipe</h1>
-        <img src="./../assets/images/painauchocolat.jpg" alt="Pain au chocolat image" height="400" width="400">
-        <h2>Description</h2>
-        <p>Pain au chocolat is a beloved French pastry known for its flaky, buttery layers and rich flavor. Made from laminated dough similar to croissant dough, it's wrapped around two sticks of dark chocolate that soften as they bake. The result is a <i>golden</i>, crisp exterior with a <em>soft</em>, airy interior and a melted chocolate center.</p>
-        <p>A staple of French breakfasts and patisseries worldwide, it's a simple yet indulgent treat. Whether paired with coffee or enjoyed on its own, pain au chocolat remains a timeless classic.</p>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>¼ cup warm water</li>
-            <li>2 ¼ cups bread flour</li>
-            <li>2 tablespoons instant nonfat dry milk</li>
-            <li>1 tablespoon white sugar</li>
-            <li>½ teaspoon salt</li>
-            <li>2 tablespoons butter, softened</li>
-            <li>1 ½ teaspoons instant yeast</li>
-            <li>½ cup butter, softened</li>
-            <li>1 egg yolk</li>
-            <li>1 tablespoon milk</li>
-            <li>9 ounces semisweet chocolate chunks</li>
-        </ul>
-        <h2>Steps</h2>
-        <ol>
-            <li>Gather the ingredients.</li>
-            <li>Pour water into a bread machine pan; add flour. Sprinkle milk powder over flour. Place sugar, salt, and 2 tablespoons of softened butter into the corners of the pan. Make a small indent in the top of the dry ingredients and place yeast in the indent. Run the bread machine on the basic dough setting.</li>
-            <li>Meanwhile, lay out a sheet of waxed or parchment paper. Shape the remaining 1/2 cup of butter into a 3x5-inch rectangle on the waxed paper; wrap and chill until ready to use.</li>
-            <li>Remove butter from the refrigerator and allow to soften while you roll out dough. Turn dough out onto a lightly floured surface; roll into a 8x12-inch rectangle. Place butter on half of the dough, leaving a 1/2-inch border of dough on 3 sides. Fold the other half of dough over butter and press the edges firmly to seal.</li>
-            <li>Roll the dough out to a 6x14-inch rectangle. Fold the dough in thirds from the long ends, as you would fold a business letter. Cover dough loosely with plastic wrap and refrigerate for 20 minutes.</li>
-            <li>Remove the dough from the refrigerator. Place it onto a lightly floured surface so that the folded edge faces you. Roll the dough out again into a 6x14-inch rectangle, and fold into thirds. Cover with plastic and chill for 20 minutes.</li>
-            <li>Repeat step 5, then chill the dough for 30 minutes.</li>
-            <li>In a small bowl, beat together the egg yolk and milk; set aside. Grease two baking sheets.</li>
-            <li>Roll dough out into a 12x21-inch rectangle. Cut dough into thirds in both directions, to make 9 rectangles. Divide chocolate among the rectangles. Lightly brush egg yolk mixture around the edges of each piece. Starting at a short end, roll each piece of dough around the chocolate; press the edges together to seal.</li>
-            <li>Place the croissants onto the prepared baking sheets; cover with greased plastic wrap and allow to rise in a warm place until they have doubled in size, about 30 minutes.</li>
-            <li>Preheat oven to 400 degrees F [200 degrees C]. Brush the top of the pastries with the remaining egg yolk mixture.</li>
-            <li>Bake in the preheated oven until golden brown, about 15 minutes. Cool for 5 minutes on the baking sheets, then transfer croissants to wire racks. Serve warm or at room temperature.</li>
-        </ol>
+        <div class="navbar-container">
+            <div class="navbar">
+                <img src="./../assets/images/chef.png" alt="Icon" height="36" width="36">
+                <h3>Odin Recipes</h3>
+                <a>Credits</a>
+            </div>
+        </div>
+        <div class="header">
+            <h1>Pain au chocolat recipe</h1>
+        </div>
+        <div class="main">
+            <div class="description">
+                <h2>Description</h2>
+                <p>Pain au chocolat is a beloved French pastry known for its flaky, buttery layers and rich flavor. Made from laminated dough similar to croissant dough, it's wrapped around two sticks of dark chocolate that soften as they bake. The result is a <i>golden</i>, crisp exterior with a <em>soft</em>, airy interior and a melted chocolate center.</p>
+                <p>A staple of French breakfasts and patisseries worldwide, it's a simple yet indulgent treat. Whether paired with coffee or enjoyed on its own, pain au chocolat remains a timeless classic.</p>
+            </div>
+            <div class="ingredients">
+                <h2>Ingredients</h2>
+                <ul>
+                    <li>¼ cup warm water</li>
+                    <li>2 ¼ cups bread flour</li>
+                    <li>2 tablespoons instant nonfat dry milk</li>
+                    <li>1 tablespoon white sugar</li>
+                    <li>½ teaspoon salt</li>
+                    <li>2 tablespoons butter, softened</li>
+                    <li>1 ½ teaspoons instant yeast</li>
+                    <li>½ cup butter, softened</li>
+                    <li>1 egg yolk</li>
+                    <li>1 tablespoon milk</li>
+                    <li>9 ounces semisweet chocolate chunks</li>
+                </ul>
+            </div>
+            <div class="steps">
+                <h2>Steps</h2>
+                <ol>
+                    <li>Gather the ingredients.</li>
+                    <li>Pour water into a bread machine pan; add flour. Sprinkle milk powder over flour. Place sugar, salt, and 2 tablespoons of softened butter into the corners of the pan. Make a small indent in the top of the dry ingredients and place yeast in the indent. Run the bread machine on the basic dough setting.</li>
+                    <li>Meanwhile, lay out a sheet of waxed or parchment paper. Shape the remaining 1/2 cup of butter into a 3x5-inch rectangle on the waxed paper; wrap and chill until ready to use.</li>
+                    <li>Remove butter from the refrigerator and allow to soften while you roll out dough. Turn dough out onto a lightly floured surface; roll into a 8x12-inch rectangle. Place butter on half of the dough, leaving a 1/2-inch border of dough on 3 sides. Fold the other half of dough over butter and press the edges firmly to seal.</li>
+                    <li>Roll the dough out to a 6x14-inch rectangle. Fold the dough in thirds from the long ends, as you would fold a business letter. Cover dough loosely with plastic wrap and refrigerate for 20 minutes.</li>
+                    <li>Remove the dough from the refrigerator. Place it onto a lightly floured surface so that the folded edge faces you. Roll the dough out again into a 6x14-inch rectangle, and fold into thirds. Cover with plastic and chill for 20 minutes.</li>
+                    <li>Repeat step 5, then chill the dough for 30 minutes.</li>
+                    <li>In a small bowl, beat together the egg yolk and milk; set aside. Grease two baking sheets.</li>
+                    <li>Roll dough out into a 12x21-inch rectangle. Cut dough into thirds in both directions, to make 9 rectangles. Divide chocolate among the rectangles. Lightly brush egg yolk mixture around the edges of each piece. Starting at a short end, roll each piece of dough around the chocolate; press the edges together to seal.</li>
+                    <li>Place the croissants onto the prepared baking sheets; cover with greased plastic wrap and allow to rise in a warm place until they have doubled in size, about 30 minutes.</li>
+                    <li>Preheat oven to 400 degrees F [200 degrees C]. Brush the top of the pastries with the remaining egg yolk mixture.</li>
+                    <li>Bake in the preheated oven until golden brown, about 15 minutes. Cool for 5 minutes on the baking sheets, then transfer croissants to wire racks. Serve warm or at room temperature.</li>
+                </ol>
+            </div>
+        </div>
     </body>
 </html>
