--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -12,7 +12,7 @@
         <div class="navbar-container">
             <div class="navbar">
                 <img src="./../assets/images/chef.png" alt="Icon" height="36" width="36">
-                <h3>Odin Recipes</h3>
+                <h3><a href="./../index.html">Odin Recipes</a></h3>
                 <a>Credits</a>
             </div>
         </div>
