new: add credits page
Add credits' page.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="navbar">
                 <img src="./assets/images/chef.png" alt="Icon" height="36" width="36">
                 <h3><a href="./index.html">Odin Recipes</a></h3>
-                <a>Credits</a>
+                <a href="./credits.html">Credits</a>
             </div>
         </div>
         <div class="header">
